Resource management engine and more const paramaters.

--- a/MigEngine/MigEngine.vcxproj
+++ b/MigEngine/MigEngine.vcxproj
@@ -25,9 +25,11 @@
     <ClInclude Include="include\Locator.h" />
     <ClInclude Include="include\RenderEngine.h" />
     <ClInclude Include="include\Renderer.h" />
+    <ClInclude Include="include\ResourceEngine.h" />
     <ClInclude Include="include\Shader.h" />
     <ClInclude Include="include\SpriteRenderer.h" />
     <ClInclude Include="example\Tank.h" />
+    <ClInclude Include="include\Texture.h" />
     <ClInclude Include="include\Transform.h" />
     <ClInclude Include="include\IOEngine.h" />
     <ClInclude Include="src\Renderer.cpp" />
@@ -43,10 +45,12 @@
     <ClCompile Include="src\Locator.cpp" />
     <ClCompile Include="example\main.cpp" />
     <ClCompile Include="src\RenderEngine.cpp" />
+    <ClCompile Include="src\ResourceEngine.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\SpriteRenderer.cpp" />
     <ClCompile Include="example\Tank.cpp" />
     <ClCompile Include="src\IOEngine.cpp" />
+    <ClCompile Include="src\Texture.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
