--- a/MigEngine/MigEngine.vcxproj.filters
+++ b/MigEngine/MigEngine.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClInclude Include="example\Tank.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\ResourceEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\FragShader.frag">
@@ -89,6 +95,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\glad\src\glad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ResourceEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
