--- a/MigEngine/MigEngine.vcxproj.filters
+++ b/MigEngine/MigEngine.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="example\Paddle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\LAutils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\defaultVertShader.vert">
@@ -121,6 +124,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="example\Paddle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LAutils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
