--- a/MigEngine/MigEngine.vcxproj
+++ b/MigEngine/MigEngine.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="example\Ball.h" />
     <ClInclude Include="example\Paddle.h" />
+    <ClInclude Include="include\collisionUtils.h" />
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\GameObject.h" />
     <ClInclude Include="include\Component.h" />
@@ -48,6 +49,7 @@
     <ClCompile Include="..\..\glad\src\glad.c" />
     <ClCompile Include="example\Ball.cpp" />
     <ClCompile Include="example\Paddle.cpp" />
+    <ClCompile Include="src\collisionUtils.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="example\main.cpp" />
     <ClCompile Include="src\LAutils.cpp" />
