--- a/MigEngine/MigEngine.vcxproj
+++ b/MigEngine/MigEngine.vcxproj
@@ -67,7 +67,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{54B18F2F-87CE-4B81-A536-AE3A4A54B46F}</ProjectGuid>
     <RootNamespace>MigEngine</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -122,7 +122,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\mooda\Documents\irrKlang-1.6.0\include;C:\Users\mooda\Documents\mig-engine\MigEngine\include;C:\Users\mooda\Downloads\eigen-eigen-5a0156e40feb\eigen-eigen-5a0156e40feb;C:\Users\mooda\Documents\glfw-3.2.1.bin.WIN32\include;C:\Users\mooda\Documents\glad\include;$(IncludePath)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\mooda\Documents\irrKlang-1.6.0\include;C:\Users\mooda\Documents\mig-engine\MigEngine\include;C:\Users\mooda\Documents\eigen-eigen-323c052e1731;C:\Users\mooda\Documents\glfw-3.2.1.bin.WIN32\include;C:\Users\mooda\Documents\glad\include;$(IncludePath)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>C:\Users\mooda\Documents\irrKlang-1.6.0\lib\Win32-visualStudio;C:\Users\mooda\Documents\glfw-3.2.1.bin.WIN32\lib-vc2015</AdditionalLibraryDirectories>
